# fourier-benchmarking

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: cpm.cmake
source/: MetalShader.metal  benchmarking.h  dft.h  fft.h  hlsl-dft.cpp  hlsl-dft.h  hlsl-dft.hlsl  main.cpp  math.h  metal-dft.h  metal-dft.mm
